--- a/cronometro.ui
+++ b/cronometro.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>166</height>
+    <height>227</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -65,6 +65,27 @@
    <property name="font">
     <font>
      <pointsize>30</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelEstado">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>175</y>
+     <width>231</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="text">
