--- a/cronometro.ui
+++ b/cronometro.ui
@@ -2,29 +2,54 @@
 <ui version="4.0">
  <class>watch</class>
  <widget class="QWidget" name="watch">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>227</height>
+    <width>730</width>
+    <height>494</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>730</width>
+    <height>494</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>Clock Watch</string>
+   <string>Temporizador</string>
+  </property>
+  <property name="whatsThis">
+   <string/>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
   </property>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>371</width>
+     <x>146</x>
+     <y>10</y>
+     <width>421</width>
      <height>41</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QPushButton" name="btn_start">
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border-color: rgb(149, 149, 149);</string>
+      </property>
       <property name="text">
        <string>Start</string>
       </property>
@@ -32,6 +57,13 @@
     </item>
     <item>
      <widget class="QPushButton" name="btn_stop">
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
       <property name="text">
        <string>Stop</string>
       </property>
@@ -39,6 +71,13 @@
     </item>
     <item>
      <widget class="QPushButton" name="btn_reset">
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
       <property name="text">
        <string>Reset</string>
       </property>
@@ -46,6 +85,16 @@
     </item>
     <item>
      <widget class="QPushButton" name="btn_exit">
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border-color: rgb(149, 149, 149);</string>
+      </property>
       <property name="text">
        <string>Exit</string>
       </property>
@@ -56,15 +105,15 @@
   <widget class="QLabel" name="lb_watch">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>80</y>
-     <width>321</width>
-     <height>61</height>
+     <x>10</x>
+     <y>60</y>
+     <width>711</width>
+     <height>261</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>30</pointsize>
+     <pointsize>120</pointsize>
     </font>
    </property>
    <property name="text">
@@ -77,16 +126,21 @@
   <widget class="QLabel" name="labelEstado">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>175</y>
-     <width>231</width>
-     <height>31</height>
+     <x>220</x>
+     <y>350</y>
+     <width>291</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>18</pointsize>
+     <pointsize>40</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(103, 103, 103);</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
@@ -95,6 +149,13 @@
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
+  <zorder>horizontalLayoutWidget</zorder>
+  <zorder>lb_watch</zorder>
+  <zorder>labelEstado</zorder>
+  <zorder>btn_start</zorder>
+  <zorder>btn_stop</zorder>
+  <zorder>btn_reset</zorder>
+  <zorder>btn_exit</zorder>
  </widget>
  <resources/>
  <connections>
