--- a/cronometro.ui
+++ b/cronometro.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>730</width>
-    <height>494</height>
+    <width>1218</width>
+    <height>504</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -26,23 +26,48 @@
    <string/>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 255, 255);</string>
+   <string notr="true">background-color: rgb(0, 0, 0);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="1">
-    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0,0,0">
-     <property name="spacing">
-      <number>6</number>
+   <item row="4" column="1">
+    <widget class="QLabel" name="lb_watch">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>250</height>
+      </size>
      </property>
-     <property name="sizeConstraint">
-      <enum>QLayout::SetDefaultConstraint</enum>
+     <property name="font">
+      <font>
+       <pointsize>200</pointsize>
+      </font>
      </property>
-     <property name="leftMargin">
-      <number>80</number>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 0);</string>
      </property>
-     <property name="rightMargin">
-      <number>80</number>
+     <property name="text">
+      <string>TextLabel</string>
      </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="7" column="1">
+    <layout class="QHBoxLayout" name="horizontalLayout_6">
      <item>
       <widget class="QPushButton" name="btn_start">
        <property name="maximumSize">
@@ -59,7 +84,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">border-color: rgb(149, 149, 149);</string>
+        <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(85, 85, 85);</string>
        </property>
        <property name="text">
         <string>Start</string>
@@ -67,42 +93,27 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btn_stop">
+      <widget class="QPushButton" name="btn_back">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>120</width>
+         <width>150</width>
          <height>16777215</height>
         </size>
        </property>
        <property name="font">
         <font>
          <pointsize>11</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
         </font>
        </property>
-       <property name="text">
-        <string>Stop</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_reset">
-       <property name="maximumSize">
-        <size>
-         <width>120</width>
-         <height>16777215</height>
-        </size>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>11</pointsize>
-         <weight>50</weight>
-         <bold>false</bold>
-        </font>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(85, 85, 85);</string>
        </property>
        <property name="text">
-        <string>Reset</string>
+        <string>Nuevo combate</string>
        </property>
       </widget>
      </item>
@@ -122,7 +133,8 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">border-color: rgb(149, 149, 149);</string>
+        <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(85, 85, 85);</string>
        </property>
        <property name="text">
         <string>Exit</string>
@@ -131,48 +143,71 @@
      </item>
     </layout>
    </item>
-   <item row="2" column="1">
-    <widget class="QLabel" name="lb_watch">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>250</height>
-      </size>
+   <item row="8" column="1">
+    <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,0">
+     <property name="spacing">
+      <number>6</number>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>120</pointsize>
-      </font>
+     <property name="sizeConstraint">
+      <enum>QLayout::SetDefaultConstraint</enum>
      </property>
-     <property name="text">
-      <string>TextLabel</string>
+     <property name="leftMargin">
+      <number>80</number>
      </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
+     <property name="rightMargin">
+      <number>80</number>
      </property>
-    </widget>
+     <item>
+      <widget class="QPushButton" name="btn_stop">
+       <property name="maximumSize">
+        <size>
+         <width>170</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(85, 85, 85);</string>
+       </property>
+       <property name="text">
+        <string>Reset current clock</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_reset">
+       <property name="maximumSize">
+        <size>
+         <width>170</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(85, 85, 85);</string>
+       </property>
+       <property name="text">
+        <string>Restart current clock</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
-   <item row="3" column="1">
-    <widget class="QLabel" name="labelEstado">
-     <property name="font">
-      <font>
-       <pointsize>40</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(103, 103, 103);</string>
-     </property>
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
+   <item row="7" column="0">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -185,7 +220,33 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="2">
+   <item row="8" column="0">
+    <spacer name="horizontalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="7" column="2">
+    <spacer name="horizontalSpacer_4">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="8" column="2">
     <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -198,20 +259,27 @@
      </property>
     </spacer>
    </item>
-   <item row="0" column="1">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+   <item row="5" column="1">
+    <widget class="QLabel" name="labelEstado">
+     <property name="font">
+      <font>
+       <pointsize>40</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255,255,255);</string>
      </property>
-    </spacer>
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
    </item>
-   <item row="4" column="1">
+   <item row="6" column="1">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
